--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<h2>Random Coach Chiatte Simulator</h2>
+<p>Math.floor(Math.random() * 11) returns a random integer between 0 and 10 (both included):</p>
+<p id="SimOut"></p>
+<script>
+  var SimRand;
+SimRand = Math.floor(Math.random() * 11);
+  
+</script>
+</body>
+</html>
