--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,42 @@
 <p id="SimOut"></p>
 <script>
   var SimRand;
-SimRand = Math.floor(Math.random() * 11);
-  
+  SimRand = Math.floor(Math.random() * 11);
+  switch(expression) {
+    case 0:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 1:
+      document.getElementById("SimOut").innerHTML = "Thumbcheck";
+      break;
+    case 2:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 3:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 4:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 5:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 6:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 7:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 8:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 9:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+    case 10:
+      document.getElementById("SimOut").innerHTML = "EXCUSE ME";
+      break;
+}
 </script>
 </body>
 </html>
